--- a/aba.css
+++ b/aba.css
@@ -1,8 +1,11 @@
+body {
+    margin: 0px;
+    padding: 0px;
+}
 div#shell {
     border: 1px solid red;
-    height: 100%;
-    width: 100%;
     position:relative;
+    width
 }
 
 div#shell>div {
