--- a/aba.css
+++ b/aba.css
@@ -1,12 +1,13 @@
 body {
     background-color: #000;
-    margin: 0px;
+    margin: 100px 0 0 0;
     padding: 0px;
 }
 img {
     border: 0px;
 }
 div#shell {
+    margin: auto;
     position:relative;
     height: 540px;
     width: 700px;
@@ -30,17 +31,24 @@ div#shell>div#thumbs {
 }
 /*gallery title*/
 div#shell div h2{
+    display: block;
+    font-size:35px;
     background-color: white;
-    border: 1px solid yellow;
+    bottom: 0px;
     position: absolute;
-    z-index: 1;
+    opacity: 0.7;
+    z-index: 2;
 }
 /*gallery count*/
 div#shell div h3{
-    background-color: white;
-    position: relative;
+    font-size: 35px;
+    background-color: transparent;
+    color: #ccc;
+    opacity: 0.7;
+    bottom: 0px;
+    right: 0px;
+    position: absolute;
     padding-top:50px;
-    float:right;
     margin: 0;
     display: block;
     z-index: 1;
@@ -96,7 +104,8 @@ div#fireworks {
 
 div#fireworks img {
     border: 0px;
-    height:500px;
+    min-height:500px;
+    min-width:150px;
 }
 
 div#lighthouse {
@@ -104,17 +113,19 @@ div#lighthouse {
     top:250px;
     height:250px;
 }
+div#lighthouse img {
+    min-height: 250px;
+    min-width: 150px;
+}
 
 div#montreal {
     left: 200px;
     top:0px;
 }
-
 div#montreal img {
     position: absolute;
-    left: 0;
-    top:0;
-    height:200px;
+    min-height: 250px;
+    min-width: 150px;
 }
 
 div#night {
@@ -122,8 +133,19 @@ div#night {
     top:0px;
 }
 
+div#night img {
+    min-height: 250px;
+    min-width: 150px;
+}
+
 div#israel {
     left: 400px;
     top:250px;
+    height: 250px;
+}
+
+div#israel img {
+    min-height: 250px;
+    min-width: 150px;
 }
 
