--- a/dev.css
+++ b/dev.css
@@ -24,6 +24,7 @@ div#shell div.gallery-overlay div.yui-widget-hd {
 div#shell div.gallery-overlay div.yui-widget-bd {
     overflow:auto;
 }
+
 /*image item*/
 div#shell div.gallery div.thumb {
     width: 150px;
@@ -34,6 +35,7 @@ div#shell div.gallery div.thumb {
     vertical-align: top;
 }
 
+/*Gallery Index Thumbnails*/
 /*gallery title*/
 div#shell div h2{
     background-color: white;
@@ -45,11 +47,11 @@ div#shell div h2{
 /*gallery count*/
 div#shell div h3{
     background-color: white;
-    position: relative;
-    padding-top:50px;
-    float:right;
+    position: absolute;
+    float:left;
+    padding-top:0px;
     margin: 0;
-    display: block;
+    display: inline-block;
     z-index: 1;
 }
 
@@ -61,15 +63,18 @@ div#shell div span {
 }
 
 div.index {
+    float: left;
     height:100px;
     overflow: hidden;
     width: 133px;
 }
 
 /*Position the Index Pictures a bit more centered.*/
-div.index img {position: relative;
-    left: -50px;
+div.index img {
+/*    position: relative;*/
+/*    left: -50px;
     top: -30px;
+*/
 }
 
 div#shell div.index span, /*We want to hide the picture title when its the gallery thumb*/
