--- a/dev.css
+++ b/dev.css
@@ -14,6 +14,7 @@ div#shell div.tag {
 /* The bounding box for the gallery overlay*/
 div#shell div.gallery-overlay {
     background-color: #fff;
+    top: 30px;
 }
 
 div#shell div.gallery-overlay div.yui-widget-hd {
