--- a/dev.css
+++ b/dev.css
@@ -30,12 +30,12 @@ div#shell div.gallery-overlay div.yui-widget-hd h1{
 /*    padding-right: 20px;*/
 }
 
-div#shell div.gallery-overlay div.yui-widget-ft div.overlay-close {
+div.yui-widget-ft div.overlay-close {
     left: 50%;
 }
 
-div#shell div.gallery-overlay div.yui-widget-hd div.overlay-close,
-div#shell div.gallery-overlay div.yui-widget-ft div.overlay-close  {
+div.yui-widget-hd div.overlay-close,
+div.yui-widget-ft div.overlay-close  {
     border: 1px solid grey;
     font-weight: bold;
     padding: 5px;
